fixes the scaling of the vertical tabs for the reader on small devices

--- a/tapas_redesign/assets/sass/templates/carousel.scss
+++ b/tapas_redesign/assets/sass/templates/carousel.scss
@@ -3,6 +3,6 @@
   background-repeat:no-repeat;
 }
 .no-thumbnail{
-  padding-top:24px;
+  padding-top:25px;
   padding-bottom:24px;
 }
