--- a/tapas_redesign/assets/sass/templates/navbar.scss
+++ b/tapas_redesign/assets/sass/templates/navbar.scss
@@ -125,3 +125,12 @@ a.back-to-top .fa{
   -o-transition: all 0.3s ease;
   transition: all 0.3s ease;
 }
+
+.horizontal-tabs{
+  .nav-tabs{
+    padding:0;
+    li{
+      padding:0;
+    }
+  }
+}
