--- a/tapas_redesign/css/style.css
+++ b/tapas_redesign/css/style.css
@@ -11223,6 +11223,13 @@ a.back-to-top .fa, a.back-to-top a.tabledrag-handle .handle, a.tabledrag-handle 
   transition: all 0.3s ease;
 }
 
+.horizontal-tabs .nav-tabs {
+  padding: 0;
+}
+.horizontal-tabs .nav-tabs li {
+  padding: 0;
+}
+
 .record .panel, .record #homebox .homebox-portlet, #homebox .record .homebox-portlet, .record .block {
   margin-top: 20px;
 }
@@ -11403,7 +11410,7 @@ footer #block-menu-menu-footer-menu .menu .leaf a {
 }
 
 .no-thumbnail {
-  padding-top: 24px;
+  padding-top: 25px;
   padding-bottom: 24px;
 }
 
